# BasicNerf

./: .gitignore  Dockerfile  README.md  ruff.toml  setup.cfg
basic_nerf/: __init__.py  early_stopping.py  main.py  nerf.py  positional_encoder.py  renderer.py  utils.py
basic_nerf/models/: __init__.py  input_config.py
config/: default.json
src/: main.py
