[metadata]
# replace with your username:
name = basic-nerf
version = 0.0.1
author = Johannes Zellinger
author_email = TODO
description = Basic NerF Implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = TODO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >=3.8

install_requires =
    torch==2.1.0
    torchvision==0.16.0
    tqdm==4.66.1
    matplotlib>=3.7.3
    numpy==1.24.1
    pydantic==2.4.2

[options.extras_require]
dev =
    pytest